[package]
authors = ["Phillip Bonhomme <phillip.bonhomme@gmail.com>"]
name = "llhd_egraph"
version = "0.1.0"
edition = "2021"

[dependencies]
llhd = "0.16.0"
egglog = { git = "https://github.com/pbonh/egglog.git" }
itertools = "0.13.0"
rayon = "1.10.0"
typed-builder = "0.20.0"
derive-getters = "0.5.0"
frunk = "0.4.3"
lazy_static = "1.5.0"

[dev-dependencies]
indoc = "2.0.4"
utilities = { path = "../utilities" }
