[package]
authors = ["Phillip Bonhomme <phillip.bonhomme@gmail.com>"]
name = "llhd_egraph"
version = "0.1.0"
edition = "2021"

[dependencies]
llhd = { workspace = true }
egglog = { workspace = true }
egglog-program = { path = "../egglog-program" }
itertools = { workspace = true }
rayon = { workspace = true }
typed-builder = { workspace = true }
derive-getters = { workspace = true }
frunk = { workspace = true }
lazy_static = { workspace = true }

[dev-dependencies]
indoc = "2.0.4"
utilities = { path = "../utilities" }
